# strong-stock-screener

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  PRODUCT.md  README.md  docker-compose.dual.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: config.py  gsgf_rules.py  main.py  models.py  rules.py
apps/api/rc8-worker/: pyproject.toml  test_worker.py
apps/api/scripts/: run_gsgf_real_calibration.py  run_market_sentiment_validation.py
apps/api/tests/: market_sentiment_fixtures.py  test_api.py  test_auction.py  test_auction_model.py  test_auction_review.py  test_auction_sampler.py  test_auction_snapshot_store.py  test_auction_top3_live_confirmation.py  test_auction_top3_training.py  test_background_jobs.py  test_benchmark_czsc_rc8.py  test_cache_registry.py  test_capital_signal_providers.py  test_capital_signal_sampler.py  test_capital_signal_store.py  test_capital_signals.py  test_chanlun_adapter.py  test_chanlun_alerts.py  test_chanlun_bars.py  test_chanlun_models.py  test_chanlun_paper.py  test_chanlun_rc8_client.py  test_chanlun_research_catalog.py  test_chanlun_research_dataset.py  test_chanlun_research_history.py  test_chanlun_research_models.py  test_chanlun_research_protocol.py  test_chanlun_research_report.py  test_chanlun_research_score_cache.py  test_chanlun_research_scoring.py  test_chanlun_research_service.py  test_chanlun_research_store.py  test_chanlun_research_validation.py  test_chanlun_screening.py  test_chanlun_service.py  test_chanlun_shadow_service.py  test_chanlun_store.py  (+44 more)
(+477 files in other folders)
