[project]
name = "strong-stock-screener-api"
version = "0.1.0"
description = "Standalone A-share strong-stock screener backend"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.16.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "thsdk>=1.7.18",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
